@@ -1,3 +1,7 @@
+2007-11-03  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* FileAccess.cc: (Log2) don't use %.*s (it mishandles invalid mb characters).
+
 2007-10-24  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* parsecmd.cc: don't accept incomplete comments.
